<resources>
    <string name="app_name">SecondMVVMTrainingProject</string>
    <string name="bnbNavigator_all_fragment_text">Todos</string>
    <string name="bnbNavigator_order_fragment_text">Orden Alfabético</string>
    <string name="bnbNavigator_search_fragment_text">Buscar</string>
    <string name="fragment_detail_tvWeightDetail_text">Weight:</string>
    <string name="fragment_detail_tvHeightDetail_text">Height:</string>
    <string name="fragment_detail_tvTypeDetail_text">Type:</string>
    <string name="activity_main_fabFavourites">Añadir Tarea</string>
    <string name="pokemon_row_ivPicture_content_description">Contenido imagen lista pokemons</string>
    <string name="fab_pokemon_added">Pokemon añadido a tu equipo</string>
    <string name="pokemon_added_to_go">Ir a Mi Equipo</string>
    <string name="menu_item_pokemon_book">Pokemon Book</string>
    <string name="menu_item_team">My Team</string>
    <string name="menu_item_Play">Play</string>
    <string name="menu_item_player_records">Player Records</string>
    <string name="menu_item_close_session">Close Session</string>
    <string name="menu_item_contact">Contact Us</string>
    <string name="pokemon_battle_card_title">POKEMON BATTLE CARD</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="nav_header_title_text">Pokemon Battle Card</string>
    <string name="auth_wellcome">Bienvenido</string>
    <string name="auth_see_you">Hasta pronto</string>
    <string name="error_no_network">Sin señal de red</string>
    <string name="error_code">Código del error</string>
    <string name="activity_main_waiting_text">Espere un momento, por favor</string>
    <string name="finish_session">Sesión finalizada</string>
    <string name="error_closing_session">No se pudo cerrar sesión</string>
    <string name="menu_main_sign_out">Cerrar sesión</string>
    <string name="app_cover_description">Portada de la app</string>
    <string name="facebook_application_id" translatable="false">411092414019130</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb411092414019130</string>
    <string name="my_team_title">MI EQUIPO</string>
    <string name="repeated_pokemon">Ya has elegido este, escoge otro</string>
    <string name="dialog_delete_title">Estás seguro?</string>
    <string name="dialog_delete_confirm">Eliminar</string>
    <string name="dialog_delete_cancel">Cancelar</string>
    <string name="full_team">Tu equipo está completo</string>
    <string name="hint_full_name">Nombre Completo</string>
    <string name="hint_photo_url">URL Foto perfil</string>
    <string name="profile_update">Actualizar</string>
    <string name="profile_title">Perfil de usuario</string>
    <string name="user_updated">Usuario actualizado</string>
    <string name="user_updating_error">Error en la actualización del usuario</string>
    <string name="menu_item_edit_user">Edit User Profile</string>
    <string name="ib_my_team_first_pokemon">Primer pokemon de mi equipo</string>
    <string name="ib_my_team_second_pokemon">Segundo pokemon de mi equipo</string>
    <string name="ib_my_team_third_pokemon">Tercer pokemon de mi equipo</string>
    <string name="ib_enemy_first_pokemon">Primer pokemon de mi enemigo</string>
    <string name="ib_enemy_second_pokemon">Segundo pokemon de mi enemigo</string>
    <string name="ib_enemy_third_pokemon">Tercer pokemon de mi enemigo</string>
    <string name="mb_fight_text">Fight!</string>
    <string name="winning_icon_description">Icono de ganar</string>
    <string name="lost_icon_description">losing_icon_description</string>
    <string name="mb_secret_room_text">Secret Room</string>
    <string name="mb_restart_text">Restart</string>
    <string name="game_team_min_players">Debes tener tres Pokemons en tu equipo</string>
    <string name="winning_battle_result">YOU WIN</string>
    <string name="losing_battle_result">YOU LOSE</string>
    <string name="winning_result_battle">YOU WIN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="option_prize_cow">Vaca</string>
    <string name="option_prize_baby_elephant">Bebé Elefante</string>
    <string name="option_prize_pikachu">Pikachu</string>
    <string name="option_prize_pokemon_ball">Bola Pokemon</string>
    <string name="option_prize_mew">Mew</string>
    <string name="option_prize_ponyta">Ponyta</string>
    <string name="option_prize_bulbasaur">Bulbasaur</string>
    <string name="option_prize_eevee">Eevee</string>
    <string name="material_button_continue">Continue</string>
    <string name="fragment_options_title">Escoge Premio y continua</string>
    <string name="menu_item_game_info">About the game</string>
    <string name="game_info_title">GAME INFORMATION</string>
    <string name="game_info_menu_general">1.General</string>
    <string name="game_info_menu_game">2.Juego</string>
    <string name="game_info_body_general">Pokemon Battle Card no es tanto un videojuego sino más bien una aplicación de entretenimiento infantil.\n\n Al entrar en la aplicación debes iniciar sesión si aún no lo habías hecho.\n\n Puedes autenticarte mediante usuario (cuenta de correo electrónico y contraseña), mediante una cuenta de Google, mediante una cuenta de Facebook o bien mediante número de teléfono (te llegará un SMS al número introducido con un código que te permitirá entrar en la aplicación).\n\n Una vez dentro te encontrarás con una pantalla principal en la que podrás desplegar un menú lateral con distintas opciones:\n\n - Libro de Pokemons: aquí dispondrás de un listado de Pokemons. Al pulsar cualquiera de ellos podrás ver su ficha técnica. Así mismo encontrarás un botón con un icono así “+” que podrás utilizar para añadir ese Pokemon a tu equipo (hasta un máximo de tres).\n\n En esta pantalla verás también una barra inferior de menú con tres opciones. Por defecto aparecerás en la lista de Pokemons. Las otras dos opciones son simplemente filtros de búsqueda. Una te ofrece la búsqueda por orden alfabético y la otra por medio de un buscador donde podrás escribir el nombre del Pokemon que deseas encontrar.\n\n - Mi Equipo: Aquí podrás ver tu equipo según los Pokemons que hayas elegido.\n\n  - Play: Este es el juego en cuestión que describiremos más detalladamente en el siguiente apartado.\n\n - Sobre el juego: Es el apartado en el que te encuentras, donde se proporciona información de esta aplicación.\n\n - Editar Perfil: Podrás editar ciertos datos de usuario como el nombre y una fotografía que podrás seleccionar de la galería de fotos de tu teléfono móvil.\n\n - Cerrar Sesión: Pulsando aquí cerrarás tu sesión. La siguiente vez que entres en la aplicación tendrás que autenticarte de nuevo.</string>
    <string name="game_info_body_game">Al entrar en la pantalla de juego lo primero que verás será tu equipo (las fotos de tus tres Pokemon con su nombre debajo).\n\n
Si tu equipo no estuviese completo, es decir, con menos de tres Pokemon, un mensaje te advertirá que no puedes comenzar a jugar hasta que completes tu equipo con tres Pokemon. Dicho mensaje te facilitará un enlace directo a la pantalla “Mi equipo” para que lo utilices si quieres. El juego permanecerá bloqueado hasta que completes tu equipo.\n\n
Con tu equipo completo, comienza el juego. Frente a cada uno de tus tres Pokemon se situarán los de tu enemigo (que elegirá aleatoriamente el programa).\n\n
Al principio se verá un signo de interrogación en las casillas de tus enemigos. Al pulsar el botón “Fight”, aparecerán tus enemigos y comenzará la batalla. Primero lucharán los dos primeros (tu primer Pokemon contra el primer Pokemon rival, luego los dos segundos y finalmente los tres terceros.\n\n
Tras cada una de las tres batallas se podrá ver cuál de los dos ha ganado y cuál ha perdido.
El ganador tendrá el signo verde positivo y el perdedor una “X” roja.\n\n
El resultado de la batalla lo decide un algoritmo que explicaré a continuación:</string>
    <string name="game_info_body_general_title">1.General</string>
    <string name="game_info_body_game_title">2.Juego</string>
    <string name="game_info_body_game_pokemon_type_title">TYPE</string>
    <string name="game_info_body_game_pokemon_type_ice_win_title">WINS Vs.</string>
    <string name="game_info_body_game_pokemon_type_ice_lose_title">LOSE Vs.</string>
    <string name="game_info_body_game_pokemon_type_ice">Ice</string>
    <string name="game_info_body_game_pokemon_type_ice_win">Dragon\nPsychic\nFighting\nBug\nGrass\nNormal\nWater</string>
    <string name="game_info_body_game_pokemon_type_ice_lose">Ghost\nGround\nRock\nElectric\nFire\nPoison</string>
    <string name="game_info_body_game_pokemon_type_dragon">Dragon</string>
    <string name="game_info_body_game_pokemon_type_dragon_win">Ghost\nFighting\nElectric\nFire\nBug\nPoison\nNormal</string>
    <string name="game_info_body_game_pokemon_type_dragon_lose">Ice\nPsychic\nGround\nRock\nGrass\nWater</string>
    <string name="game_info_body_game_pokemon_type_ghost">Ghost</string>
    <string name="game_info_body_game_pokemon_type_ghost_win">Ice\nFighting\nPsychic\nBug\nPoison\nNormal\nWater</string>
    <string name="game_info_body_game_pokemon_type_ghost_lose">Dragon\nGround\nRock\nElectric\nFire\nGrass</string>
    <string name="game_info_body_game_pokemon_type_fighting">Fighting</string>
    <string name="game_info_body_game_pokemon_type_fighting_win">Ground\nRock\nBug\nGrass\nNormal\nWater\n</string>
    <string name="game_info_body_game_pokemon_type_fighting_lose">Ice\nDragon\nGhost\nPsychic\nElectric\nFire\nPoison</string>
    <string name="game_info_body_game_pokemon_type_psychic">Psychic</string>
    <string name="game_info_body_game_pokemon_type_psychic_win">Dragon\nFighting\nFire\nBug\nGrass\nPoison\nNormal</string>
    <string name="game_info_body_game_pokemon_type_psychic_lose">Ice\nGhost\nGround\nRock\nElectric\nWater</string>
    <string name="game_info_body_game_pokemon_type_ground">Ground</string>
    <string name="game_info_body_game_pokemon_type_ground_win">Ice\nDragon\nGhost\nPsychic\nRock\nElectric\nPoison</string>
    <string name="game_info_body_game_pokemon_type_ground_lose">Fighting\nFire\nBug\nGrass\nNormal\nWater</string>
    <string name="game_info_body_game_pokemon_type_rock">Rock</string>
    <string name="game_info_body_game_pokemon_type_rock_win">Ice\nDragon\nGhost\nPsychic\nFire\nElectric\nPoison</string>
    <string name="game_info_body_game_pokemon_type_rock_lose">Fighting\nGround\nBug\nGrass\nNormal\nWater</string>
    <string name="game_info_body_game_pokemon_type_electric">Electric</string>
    <string name="game_info_body_game_pokemon_type_electric_win">Ice\nGhost\nFighting\nPsychic\nFire\nNormal\nWater</string>
    <string name="game_info_body_game_pokemon_type_electric_lose">Dragon\nGround\nRock\nBug\nGrass\nPoison</string>
    <string name="game_info_body_game_pokemon_type_fire">Fire</string>
    <string name="game_info_body_game_pokemon_type_fire_win">Ice\nGhost\nFighting\nGround\nBug\nGrass\nNormal</string>
    <string name="game_info_body_game_pokemon_type_fire_lose">Dragon\nPsychic\nRock\nElectric\nPoison\nWater</string>
    <string name="game_info_body_game_pokemon_type_bug">Bug</string>
    <string name="game_info_body_game_pokemon_type_bug_win">Ground\nRock\nElectric\nGrass\nPoison\n\n\n</string>
    <string name="game_info_body_game_pokemon_type_bug_lose">Ice\nDragon\nGhost\nFighting\nPsychic\nFire\nNormal\nWater</string>
    <string name="game_info_body_game_pokemon_type_grass">Grass</string>
    <string name="tv_auth_status_text">¿Quién eres?</string>
    <string name="b_authenticate_text">Comprobar</string>
    <string name="tv_intro_text">Para recibir el premio elegido,\n pulsa el botón \"COMPROBAR\"\n Si eres quien debes ser, te\n enviaremos el premio al instante\n al lugar en que te encuentras ahora mismo.</string>
</resources>