<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/pokemon_book"
            android:title="@string/menu_item_pokemon_book"
            android:icon="@drawable/ic_menu_book"/>
        <item
            android:id="@+id/my_team"
            android:title="@string/menu_item_team"
            android:icon="@drawable/ic_group"/>
        <item
            android:id="@+id/play_game"
            android:title="@string/menu_item_Play"
            android:icon="@drawable/ic_play_circle_filled"/>
        <item
            android:id="@+id/game_info"
            android:title="@string/menu_item_game_info"
            android:icon="@drawable/ic_help_center"/>
        <item
            android:id="@+id/action_profile"
            android:title="@string/menu_item_edit_user"
            android:icon="@drawable/ic_account_circle"/>
        <item
            android:id="@+id/close_session"
            android:title="@string/menu_item_close_session"
            android:icon="@drawable/ic_logout"/>
        <item
            android:id="@+id/contact_us"
            android:title="@string/menu_item_contact"
            android:icon="@drawable/ic_home"/>
    </group>

</menu>