<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"

    tools:context=".presentation.biometricauth.BiometricAuthActivity">

    <TextView
        android:id="@+id/tvIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bAuth"
        android:layout_marginTop="@dimen/common_padding_double"
        android:padding="@dimen/common_padding_default"
        android:text="@string/tv_intro_text"
        android:textAlignment="center"
        android:lineSpacingExtra="@dimen/common_padding_extra_min"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_auth_status_text_size"/>

    <Button
        android:id="@+id/bAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/b_authenticate_text"/>

    <TextView
        android:id="@+id/tvAuthStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bAuth"
        android:layout_marginTop="@dimen/common_padding_default"
        android:text="@string/tv_auth_status_text"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_auth_status_text_size"/>

</androidx.constraintlayout.widget.ConstraintLayout>