<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding_default"
    android:background="@color/blue_light">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/common_padding_default"
        android:text="@string/fragment_options_title"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:fontFamily="@font/bangers"
        android:textColor="@color/light_blue_900"/>

    <RadioGroup
        android:id="@+id/rgBottomsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginStart="@dimen/common_padding_default">

        <RadioButton
            android:id="@+id/rbCow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_prize_cow"
            android:textStyle="bold"
            android:textColor="@color/light_blue_900_dark"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:buttonTint="@color/light_blue_900_dark"/>

        <RadioButton
            android:id="@+id/rbBabyElephant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_prize_baby_elephant"
            android:textStyle="bold"
            android:textColor="@color/light_blue_900_dark"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:buttonTint="@color/light_blue_900_dark"/>

        <RadioButton
            android:id="@+id/rbPikachu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_prize_pikachu"
            android:textStyle="bold"
            android:textColor="@color/light_blue_900_dark"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:buttonTint="@color/light_blue_900_dark"/>

        <RadioButton
            android:id="@+id/rbPokemonBall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_prize_pokemon_ball"
            android:textStyle="bold"
            android:textColor="@color/light_blue_900_dark"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:buttonTint="@color/light_blue_900_dark"/>

        <RadioButton
            android:id="@+id/rbOtro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_prize_otro"
            android:textStyle="bold"
            android:textColor="@color/light_blue_900_dark"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:buttonTint="@color/light_blue_900_dark"/>

        <RadioButton
            android:id="@+id/rbOtroMas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_prize_otro_mas"
            android:textStyle="bold"
            android:textColor="@color/light_blue_900_dark"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:buttonTint="@color/light_blue_900_dark"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgBottomsGroup"
        android:text="@string/material_button_continue"
        android:layout_marginTop="@dimen/common_padding_double"
        android:backgroundTint="@color/light_blue_900"
        android:shadowDx="@integer/material_motion_duration_long_1"
        android:shadowDy="@integer/material_motion_duration_long_1"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="@dimen/pikachu_anim_size"
        android:layout_height="@dimen/pikachu_anim_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bContinue"
        android:layout_marginTop="@dimen/common_padding_extra_min"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_fileName="22892-pikachu.json"
        app:lottie_loop="true" />

</androidx.constraintlayout.widget.ConstraintLayout>