<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/flFragmentThree"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"

    tools:context=".view.fragments.DetailFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivPictureDetail"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvNameDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivPictureDetail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:text="Pokemon Name" />

        <TextView
            android:id="@+id/tvWeightDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNameDetail"
            android:layout_marginTop="23dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/fragment_detail_tvWeightDetail_text" />

        <TextView
            android:id="@+id/tvWeightDetailFill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNameDetail"
            android:layout_toEndOf="@+id/tvWeightDetail"
            android:layout_marginTop="23dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="34.6 kg" />

        <TextView
            android:id="@+id/tvHeightDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvWeightDetail"
            android:layout_marginTop="15dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/fragment_detail_tvHeightDetail_text" />

        <TextView
            android:id="@+id/tvHeightDetailFill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvWeightDetail"
            android:layout_toEndOf="@+id/tvHeightDetail"
            android:layout_marginTop="15dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="1.09 m" />

        <TextView
            android:id="@+id/tvTypeDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvHeightDetail"
            android:layout_marginTop="15dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/fragment_detail_tvTypeDetail_text" />

        <TextView
            android:id="@+id/tvTypeDetailFill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvHeightDetail"
            android:layout_toEndOf="@+id/tvTypeDetail"
            android:layout_marginTop="15dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="Poison" />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/light_blue_900"
        android:contentDescription="@string/activity_main_fabFavourites"
        android:elevation="15dp"
        android:src="@drawable/ic_add"
        app:fabSize="mini" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>