<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/containerTeam"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding_extra_min"

    tools:context=".presentation.pokemonteam.view.PokemonTeamActivity">

    <TextView
        android:id="@+id/tvTeamTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/my_team_title"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline4"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecyclerTeam"
        android:layout_width="0dp"
        android:layout_height="312dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTeamTitle"
        android:layout_marginTop="@dimen/common_padding_default"
        tools:listitem="@layout/pokemon_row_team"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/teamDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvRecyclerTeam"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/common_padding_default"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/ivPictureTeamDetail"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvNameTeamDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:layout_marginStart="@dimen/common_padding_default"
                app:layout_constraintStart_toEndOf="@id/ivPictureTeamDetail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Pokemon Name"
                android:textAppearance="?attr/textAppearanceHeadline6"/>

            <TextView
                android:id="@+id/tvWeightTeamDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivPictureTeamDetail"
                android:layout_marginTop="@dimen/common_padding_default"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold"
                android:text="@string/fragment_detail_tvWeightDetail_text" />

            <TextView
                android:id="@+id/tvWeightDetailFill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tvWeightTeamDetail"
                app:layout_constraintTop_toTopOf="@id/tvWeightTeamDetail"
                android:layout_marginStart="@dimen/common_padding_min"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                tools:text="34.6 kg" />

            <TextView
                android:id="@+id/tvHeightDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWeightTeamDetail"
                android:layout_marginTop="@dimen/common_padding_default"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold"
                android:text="@string/fragment_detail_tvHeightDetail_text" />

            <TextView
                android:id="@+id/tvHeightDetailFill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tvHeightDetail"
                app:layout_constraintTop_toTopOf="@id/tvHeightDetail"
                android:layout_marginStart="@dimen/common_padding_min"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                tools:text="1.09 m" />

            <TextView
                android:id="@+id/tvTypeDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHeightDetail"
                android:layout_marginTop="@dimen/common_padding_default"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold"
                android:text="@string/fragment_detail_tvTypeDetail_text" />

            <TextView
                android:id="@+id/tvTypeDetailFill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tvTypeDetail"
                app:layout_constraintTop_toTopOf="@id/tvTypeDetail"
                android:layout_marginStart="@dimen/common_padding_min"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                tools:text="Poison" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>